# rust_course

./: 01_variables.rs  02_ownership.rs  03_complex_types.rs  04_flow_control.rs  05_match_pattern.rs  06_method.rs  07_generic_types.rs  08_traits.rs  09_box.rs  10_lifetime.rs  11_panic.rs  12_closure.rs  24.py  Cargo.toml  README.md  main
