[package]
name = "course"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
eval = "0.4.3"
num-traits = "0.2"

[[bin]]
name = "course"
# path = "01_variables.rs"
# path = "02_ownership.rs"
# path = "03_complex_types.rs"
# path = "04_flow_control.rs"
# path = "05_match_pattern.rs"
# path = "06_method.rs"
# path = "07_generic_types.rs"
# path = "08_traits.rs"
path = "09_box.rs"
